# code-assistant

./: .gitignore  LICENSE  Makefile  README.md  config.template.yaml  pyproject.toml  ruff.toml
code_assistant/: __init__.py
code_assistant/app/: __init__.py  agent.py  app.py
code_assistant/app/crew/: __init__.py  crew.py
code_assistant/app/crew/config/: __init__.py
code_assistant/config/: __init__.py  settings.py
scripts/: lint.sh
tests/: test_app.py
